[gd_scene load_steps=12 format=3 uid="uid://5730veme2tu5"]

[ext_resource type="Script" path="res://mario/red_coin.gd" id="1_fl2pe"]
[ext_resource type="Texture2D" uid="uid://8it5vdv7c2ac" path="res://mario/coin_sheet.png" id="2_4nx8j"]
[ext_resource type="Texture2D" uid="uid://dhp0h2p7egisy" path="res://mario/shadow.png" id="3_e3hga"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_04itl"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bxisd"]
height = 1.2
radius = 0.45

[sub_resource type="SphereShape3D" id="SphereShape3D_dmeo7"]
radius = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_8biof"]
atlas = ExtResource("2_4nx8j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4kxw"]
atlas = ExtResource("2_4nx8j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwolp"]
atlas = ExtResource("2_4nx8j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opxja"]
atlas = ExtResource("2_4nx8j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gscpw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8biof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4kxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwolp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opxja")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="RedCoin" type="Node3D"]
script = ExtResource("1_fl2pe")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_04itl")

[node name="IntersectCast" type="ShapeCast3D" parent="."]
enabled = false
shape = SubResource("CylinderShape3D_bxisd")
target_position = Vector3(0, 0, 0)

[node name="DropToGroundCast" type="ShapeCast3D" parent="."]
enabled = false
shape = SubResource("SphereShape3D_dmeo7")
target_position = Vector3(0, -2.5, 0)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
modulate = Color(1, 0.407843, 0.294118, 1)
pixel_size = 0.02
billboard = 1
sprite_frames = SubResource("SpriteFrames_gscpw")
frame_progress = 0.639718

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.35, 0)
size = Vector3(0.5, 4, 0.5)
texture_albedo = ExtResource("3_e3hga")
normal_fade = 0.5
upper_fade = 1e-05
distance_fade_enabled = true
distance_fade_begin = 15.0
distance_fade_length = 5.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
